Fix (some) Java 21 warnings
Hopefully the uncontroversial ones .. the rest will be fixed in another
PR.

Signed-off-by: Simon Bennetts <psiinon@gmail.com>